--- a/contact.html
+++ b/contact.html
@@ -30,6 +30,7 @@
             <a id="btn-produit" href="products.html">Produit</a>
             <a id="btn-games" href="minigame.html">Mini Jeux</a>
             <a id="btn-history" href="history.html">Histoire</a>
+            <a id="btn-stats" href="statistics.html">statistics</a>
             <a id="btn-contact" class="active" href="contact.html">Contact</a>
         </div>
         <div class="langSelect">
