--- a/history.html
+++ b/history.html
@@ -796,7 +796,9 @@
             <a id="btn-produit" href="products.html">Produit</a>
             <a id="btn-games" href="minigame.html">Mini Jeux</a>
             <a id="btn-history" class="active" href="history.html">Histoire</a>
+            <a id="btn-stats" href="statistics.html">statistics</a>
             <a id="btn-contact" href="contact.html">Contact</a>
+            
         </div>
         <div class="langSelect">
             <button class="langIcon" onclick="toggleLangDropdown()">🌐</button>
